--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <!-- align-items-center pour mettre les titres au milieu de l'image -->
 
               <div class="col-md-12 ftco-animate" style="text-align: center;">
-                <h1 class="mb-2">Travaux de Transport</h1>
+                <h1 class="mb-2">Transport</h1>
                 <h2 class="subheading mb-4">Contactez-<strong>NOUS!</strong></h2>
                 <p><a href="apropos.html" class="btn btn-success" style="background-color:blue;border:rgb(0,200,0);">Plus D'Info</a></p>
               </div>
