--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>OROTRAV</title>
     <meta charset="utf-8">
+	<meta name="google-site-verification" content="LuZYhFChlNd_DGTXpd0pjAKPRpKhGNc4rmutmFZWnKE" />
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
